# picoforge

./: Cargo.toml  README_zh.md  build.rs  picoforge.spec
src/: logging.rs  main.rs
src/device/: types.rs
src/device/fido/: constants.rs  hid.rs  mod.rs
src/device/rescue/: mod.rs
src/i18n/: mod.rs
src/ui/: mod.rs  rootview.rs  types.rs
src/ui/components/: button.rs  dialog.rs  sidebar.rs
src/ui/views/: about.rs  config.rs  home.rs  logs.rs  mod.rs  passkeys.rs  security.rs
